# video-summarizer

./: .gitignore  Cargo.toml  LICENSE  README.md
extension-backend/: README.md  process-url.sh  recompute-everything.sh  run.sh  server.sh
extension-firefox/: manifest.json
extension-firefox/js/: summarize.js
extension-firefox/popup/: menu.html  menu.js
rust-desktop-cli/src/: main.rs
src/: cli.rs  fallback_ffmpeg.rs  main.rs  mpv_controller.rs  video_processing.rs  vlc.rs
