[package]
name = "video-summarizer"
version = "1.0.0"
authors = ["Petr Šťastný <petr.stastny01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minimp3 = "0.3.3"
structopt = "0.2.18"
regex = "1.2.1"
guid-create = "0.1.1"