[package]
name = "video-summarizer"
description = "Application that infers which parts of given video are important or not, given the sound level, and speeds them up accordingly."
version = "1.2.3"
authors = ["Petr Šťastný <petr.stastny01@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
homepage = "https://github.com/SoptikHa2/video-summarizer"
documentation = "https://github.com/SoptikHa2/video-summarizer"
repository = "https://github.com/SoptikHa2/video-summarizer"
readme = "README.md"
keywords = ["video", "summarize", "shorten"]
categories = ["command-line-utilities", "multimedia", "multimedia::audio", "multimedia::video"]

[dependencies]
mpv = "0.2.3"
anyhow = "1.0.31"
structopt = "0.3.15"
